# cnft-io-marketplace

./: LICENSE  README.md  auction.cabal  cnft-io-marketplace.cabal  default.nix  shell.nix
app/: Main.hs
nix/: default.nix
nix/pkgs/haskell/: haskell.nix
scripts/: activity-minter-hash.txt  activity-minter.plutus  auction-hash.txt  auction.plutus  bid-minter-hash.txt  bid-minter.plutus  compile.sh  direct-sale-hash.txt  direct-sale.plutus  escrow-hash.txt  escrow.plutus  exchanger-hash.txt  exchanger.plutus  generate-datums.sh  global-nft-minter-hash.txt  global-nft-minter.plutus  hash-plutus.sh  production-compile.sh  update-start-time.sh
scripts/accounts/: log-all-accounts.sh
scripts/core/: bid-cancel-tx.sh  bid-tx.sh  close-successfully-tx.sh  close-tx.sh  collect-1-tx.sh  collect-2-tx.sh  exchange-tx.sh  lock-tx.sh  mint-index-nft-tx.sh
scripts/core/direct-sale/: cancel-tx.sh  close-tx.sh  emergency-close-tx.sh  lock-1-input-tx.sh  swap-buy-tx.sh  swap-buyer-has-nft-tx.sh
scripts/envars/: local-testnet.envars
scripts/failure-cases/: double-close-tx.sh  double-outbid-tx.sh  outbid-close-tx.sh  reserve-not-met-collect-tx.sh  reserve-not-met-tx.sh
scripts/failure-cases/direct-sale/: buyer-has-no-activity-token.sh  close-assets-not-returned.sh  close-no-timeout.sh  double-swap-with-same-datum-hash.sh  double-swap.sh  emergency-close-tx-wrong-closer.sh  lock-no-nft.sh  nft-goes-wrong-address-tx.sh  seller-has-no-activity-token.sh  swap-already-has-nft-tx.sh  too-little-ada-fees.sh  too-little-ada-royalties.sh  too-little-ada-swap-tx.sh  wrong-nft-swap-tx.sh
scripts/happy-path/: bid-1-cancel-tx.sh  bid-1-tx.sh  bid-2-tx.sh  close-bid-1-expired-tx.sh  close-tx.sh  collect-1-tx.sh  collect-2-tx.sh  exchange-buyer.sh  exchange-buyer1.sh  lock-tx.sh  mint-index-nft-tx-no-tokens.sh  mint-index-nft-tx.sh
scripts/happy-path/direct-sale/: cancel-2-tx.sh  cancel-no-royalty-tx.sh  cancel-tx.sh  close-tx.sh  emergency-close-tx.sh  lock-2-tx.sh  lock-emergency-close-tx.sh  lock-offer-tx.sh  lock-tx.sh  swap-high-royalty-tx.sh  swap-offer-tx.sh  swap-tx.sh  update-tx.sh
scripts/local-testnet/: auction.addr  direct-sale.addr  escrow.addr  exchanger.addr  protocol-parameters.json
scripts/mainnet/: auction.addr  direct-sale.addr  escrow.addr  exchanger.addr  protocol-parameters.json
scripts/minting/: mint-0-policy-n.sh  mint-cnftio-for-marketplace.sh
scripts/query/: all.sh  direct-sale.sh  escrow.sh  exchanger.sh
scripts/redeemers/direct-sale/: close-redeemer.json  emergency-close.json
scripts/scratch/: buyer-to-buyer-1-utxo.sh  buyer-to-marketplace.sh  buyer-to-seller-utxo.sh  setup-wallets.sh
scripts/testnet/: auction.addr  escrow.addr  exchanger.addr  protocol-parameters.json
scripts/tests/: all.sh  bid-cancel.sh  reserve-not-met-collect.sh  start-bid1-bid2-close.sh  start-bid1-close.sh  start-close-with-no-bids.sh
scripts/tests/direct-sale/: all.sh  buyer-has-no-activity-token.sh  close-assets-not-returned.sh  close-too-early.sh  close-with-no-timeout.sh  double-swap-with-same-datum-hash.sh  generic-failure-case.sh  lock-cancel.sh  lock-emergency-close-wrong-closer.sh  lock-emergency-close.sh  lock-offer-close.sh  lock-offer-swap.sh  lock-swap.sh  missing-fee.sh  missing-nft.sh  missing-royalty.sh  nft-goes-to-wrong-address.sh  seller-has-no-activity-token.sh  too-little-ada.sh  too-little-fees.sh  wrong-nft.sh
scripts/wait/: sc.sh
src/Canonical/: ActivityMinter.hs  ActivityTokenExchanger.hs  Auction.hs  BidMinter.hs  DebugUtilities.h  DirectSale.hs  Escrow.hs  Shared.hs
tests/: Main.hs
