cabal-version: 2.4
name:          cnft-io-marketplace
version:       1.0.0.0
license: MIT
author:        Richard Wallace, Jonathan Fischoff
maintainer:    jonathan@Canonicalllc.com
build-type:    Simple
copyright: 2021 Canonical LLC

common lang
  build-depends:    base ^>=4.14
  default-language: Haskell2010
  default-extensions:
    DataKinds
    MultiParamTypeClasses
    OverloadedStrings
    ScopedTypeVariables
    RecordWildCards
    TemplateHaskell
    TypeApplications
    TypeFamilies
    NamedFieldPuns
    NumericUnderscores
    LambdaCase
    BangPatterns
    NoImplicitPrelude
    CPP
    DeriveGeneric

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages

library
  import:          lang
  exposed-modules:
    Canonical.Auction
    Canonical.Escrow
    Canonical.Shared
    Canonical.BidMinter
    Canonical.ActivityMinter
    Canonical.ActivityTokenExchanger
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , containers
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , serialise

  hs-source-dirs:  src
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -Wno-unused-packages -Wall -Werror

executable create-sc
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T -Wall -Werror
  build-depends:
    , plutus-ledger
    , cardano-api
    , optparse-generic
    , cnft-io-marketplace

test-suite tests
  import:         lang
  type: exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts "-with-rtsopts=-T" -Wall -Werror
  build-depends: base
               , cnft-io-marketplace
               , hspec
               , plutus-ledger-api
               , plutus-ledger
